--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,6 +7,11 @@
         android:title="@string/title_home" />
 
     <item
+        android:id="@+id/navigation_quiz"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="@string/title_quiz" />
+
+    <item
         android:id="@+id/navigation_map"
         android:icon="@drawable/ic_map_black_24dp"
         android:title="@string/title_map" />
