--- a/app/src/main/res/layout/window_quiz.xml
+++ b/app/src/main/res/layout/window_quiz.xml
@@ -43,6 +43,7 @@
             app:layout_constraintLeft_toLeftOf="parent" />
 
             <TextView
+                android:id="@+id/TimeText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time: "
@@ -50,6 +51,14 @@
                 app:layout_constraintTop_toBottomOf="@id/question"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/TimeValue"
+                android:textSize="24sp"
+                app:layout_constraintLeft_toRightOf="@id/TimeText"
+                app:layout_constraintTop_toTopOf="@id/TimeText"
+                app:layout_constraintBottom_toBottomOf="@id/TimeText"/>
 
             <ImageView
                 android:layout_width="wrap_content"
