--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_background"
     tools:context=".ui.quiz.QuizActivity">
 
 <androidx.constraintlayout.widget.ConstraintLayout
@@ -12,12 +13,36 @@
     android:padding="15dp"
     android:layout_gravity="center">
 
+    <LinearLayout
+        android:id="@+id/locationContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textSize="24sp"
+            android:text="Question for: " />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textSize="24sp"
+            android:id="@+id/locationName"/>
+
+    </LinearLayout>
+
 <ImageView
     android:id="@+id/playButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:src="@drawable/ic_play_circle_filled_black_24dp"
-    app:layout_constraintTop_toTopOf="parent"
+    android:layout_marginTop="50dp"
+    app:layout_constraintTop_toBottomOf="@id/locationContainer"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"/>
 
@@ -58,7 +83,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No"
+        android:text="Yes"
         android:textSize="24dp"
         app:layout_constraintBottom_toTopOf="@id/rightArrow"
         app:layout_constraintRight_toRightOf="@id/rightArrow"
@@ -89,7 +114,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Yes"
+        android:text="No"
         android:textSize="24dp"
         app:layout_constraintBottom_toTopOf="@id/leftArrow"
         app:layout_constraintRight_toRightOf="@id/leftArrow"
