--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -4,7 +4,7 @@
     android:id="@+id/bottom_sheet"
     android:layout_width="match_parent"
     android:layout_height="300dp"
-    android:background="?android:attr/windowBackground"
+    android:background="@drawable/bottom_sheet_bg"
     android:orientation="vertical"
     app:behavior_hideable="true"
     app:behavior_peekHeight="300dp"
@@ -12,7 +12,18 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="10dp">
+
+        <ImageView
+            android:id="@+id/bottom_sheet_arrow2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/icn_chevron_down"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
 
         <TextView
             android:id="@+id/scroll_header"
@@ -22,14 +33,24 @@
             android:textSize="24dp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_arrow2" />
+
+        <ImageView
+            android:id="@+id/reference_image"
+            android:layout_width="150dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/scroll_header"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
 
         <TextView
             android:id="@+id/scroll_text"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/lorem"
-            app:layout_constraintTop_toBottomOf="@id/scroll_header" />
+            app:layout_constraintTop_toBottomOf="@id/scroll_header"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/reference_image"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
