--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/quiz_window"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_background"
@@ -51,7 +52,7 @@
     android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="50dp"
+    android:layout_marginVertical="30dp"
     android:text="Is this song made by xxx?"
     android:textSize="24sp"
     android:textAlignment="center"
@@ -62,30 +63,53 @@
     app:layout_constraintLeft_toLeftOf="parent" />
 
 <TextView
-    android:id="@+id/TimeText"
+    android:id="@+id/BonusText"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Time: "
+    android:text="Bonus score: "
+    android:textStyle="bold"
     android:layout_marginTop="50dp"
-    android:textSize="24sp"
+    android:textSize="20sp"
     app:layout_constraintTop_toBottomOf="@id/question"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"/>
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/TimeValue"
-    android:textSize="24sp"
-    app:layout_constraintLeft_toRightOf="@id/TimeText"
-    app:layout_constraintTop_toTopOf="@id/TimeText"
-    app:layout_constraintBottom_toBottomOf="@id/TimeText"/>
+    android:id="@+id/BonusValue"
+    android:textStyle="bold"
+    android:textSize="20sp"
+    app:layout_constraintLeft_toRightOf="@id/BonusText"
+    app:layout_constraintTop_toTopOf="@id/BonusText"
+    app:layout_constraintBottom_toBottomOf="@id/BonusText"/>
+
+    <TextView
+        android:id="@+id/TimeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Seconds left: "
+        android:layout_marginTop="10dp"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/BonusText"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/TimeValue"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toRightOf="@id/TimeText"
+        app:layout_constraintTop_toTopOf="@id/TimeText"
+        app:layout_constraintBottom_toBottomOf="@id/TimeText"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Yes"
+        android:textStyle="bold"
+        android:textColor="@android:color/holo_green_light"
         android:textSize="24dp"
-        app:layout_constraintBottom_toTopOf="@id/rightArrow"
+        app:layout_constraintTop_toTopOf="@id/rightArrow"
         app:layout_constraintRight_toRightOf="@id/rightArrow"
         app:layout_constraintLeft_toLeftOf="@id/rightArrow"/>
 
@@ -114,9 +138,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         android:text="No"
+        android:textColor="@android:color/holo_red_dark"
         android:textSize="24dp"
-        app:layout_constraintBottom_toTopOf="@id/leftArrow"
+        app:layout_constraintTop_toTopOf="@id/leftArrow"
         app:layout_constraintRight_toRightOf="@id/leftArrow"
         app:layout_constraintLeft_toLeftOf="@id/leftArrow"/>
 
