--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -47,6 +47,29 @@
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"/>
 
+    <ImageView
+        android:id="@+id/grey_wave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/playButton"
+        app:layout_constraintBottom_toBottomOf="@id/playButton"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:src="@drawable/grey_wave"
+        android:visibility="invisible"
+        />
+
+    <ImageView
+        android:id="@+id/blue_wave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/playButton"
+        app:layout_constraintBottom_toBottomOf="@id/playButton"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:src="@drawable/blue_wave_clip"
+        />
+
 <TextView
     android:id="@+id/question"
     android:layout_gravity="center"
@@ -62,45 +85,31 @@
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintLeft_toLeftOf="parent" />
 
-<TextView
-    android:id="@+id/BonusText"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Bonus score: "
-    android:textStyle="bold"
-    android:layout_marginTop="50dp"
-    android:textSize="20sp"
-    app:layout_constraintTop_toBottomOf="@id/question"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"/>
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/BonusValue"
-    android:textStyle="bold"
-    android:textSize="20sp"
-    app:layout_constraintLeft_toRightOf="@id/BonusText"
-    app:layout_constraintTop_toTopOf="@id/BonusText"
-    app:layout_constraintBottom_toBottomOf="@id/BonusText"/>
-
-    <TextView
-        android:id="@+id/TimeText"
+    <LinearLayout
+        android:id="@+id/bonusContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Seconds left: "
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/BonusText"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toBottomOf="@id/question"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/TimeValue"
-        android:textSize="20sp"
-        app:layout_constraintLeft_toRightOf="@id/TimeText"
-        app:layout_constraintTop_toTopOf="@id/TimeText"
-        app:layout_constraintBottom_toBottomOf="@id/TimeText"/>
+        app:layout_constraintLeft_toLeftOf="parent">
+
+        <TextView
+            android:id="@+id/BonusText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bonus score: "
+            android:textStyle="bold"
+            android:textSize="20sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/BonusValue"
+            android:textStyle="bold"
+            android:textSize="20sp" />
+
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -132,7 +141,7 @@
     android:src="@drawable/ic_vibration_black_24dp"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/TimeText"
+    app:layout_constraintTop_toBottomOf="@id/bonusContainer"
     android:layout_marginHorizontal="20dp" />
 
     <TextView
