--- a/app/src/main/res/layout/tfe_ic_layout_bottom_sheet.xml
+++ b/app/src/main/res/layout/tfe_ic_layout_bottom_sheet.xml
@@ -17,22 +17,9 @@
         android:id="@+id/gesture_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:paddingTop="10dp"
         android:paddingBottom="10dp">
-
-        <ImageView
-            android:id="@+id/bottom_sheet_arrow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/icn_chevron_up" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/detected_item"
@@ -48,10 +35,5 @@
                 android:gravity="right"
                 android:textColor="@android:color/black"
                 android:textSize="24sp" />
-
-        </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/design_bottom_navigation_height"/>
     </LinearLayout>
 </LinearLayout>
