Added material design for most stuff

--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -12,6 +12,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:theme="@style/Platform.MaterialComponents.Light"
         android:layout_height="match_parent"
         android:padding="10dp">
 
