--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -11,6 +11,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:theme="@style/Platform.MaterialComponents"
     android:padding="15dp"
     android:layout_gravity="center">
 
@@ -25,13 +26,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
             android:textSize="24sp"
             android:text="Question for: " />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
             android:textSize="24sp"
             android:id="@+id/locationName"/>
 
@@ -75,7 +74,7 @@
     android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="30dp"
+    android:layout_marginTop="60dp"
     android:text="Is this song made by xxx?"
     android:textSize="24sp"
     android:textAlignment="center"
@@ -136,7 +135,7 @@
 <ImageView
     android:id="@+id/phoneIcon"
     android:layout_width="wrap_content"
-    android:layout_marginTop="50dp"
+    android:layout_marginTop="30dp"
     android:layout_height="wrap_content"
     android:src="@drawable/ic_phone_android_black_24dp"
     app:layout_constraintRight_toRightOf="parent"
