--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:layout_height="wrap_content"
+        android:theme="@style/Platform.MaterialComponents"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <TextView
@@ -19,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="34sp"
+            android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent"
             android:text="@string/text_score"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -87,6 +89,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="50dp"
+            android:textStyle="bold"
             android:textSize="34sp"
             android:text="@string/text_total_score"/>
 
@@ -94,7 +97,7 @@
             android:id="@+id/total_score_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/total_score"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
