--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -46,13 +46,13 @@
             android:background="@color/colorPrimary"
             android:orientation="horizontal"
             android:paddingTop="10dp"
-            android:paddingBottom="10dp">
+            android:paddingBottom="10dp"
+            android:theme="@style/Platform.MaterialComponents">
 
             <TextView
                 android:id="@+id/detected_item"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/white"
                 android:textSize="24sp"/>
 
             <TextView
@@ -60,7 +60,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right"
-                android:textColor="@android:color/white"
                 android:textSize="24sp" />
         </LinearLayout>
     </RelativeLayout>
