--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -60,16 +60,11 @@
 
             <TextView
                 android:id="@+id/detected_item"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="24sp"/>
-
-            <TextView
-                android:id="@+id/detected_item_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right"
-                android:textSize="24sp" />
+                android:textAlignment="center"
+                android:textSize="24sp"/>
+
         </LinearLayout>
     </RelativeLayout>
 
