--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -110,7 +110,7 @@
             android:gravity="center_horizontal"
             android:layout_marginTop="10dp"
             android:layout_marginHorizontal="20dp"
-            android:background="@color/design_default_color_primary"
+            android:background="@color/colorPrimary"
             android:paddingVertical="15dp"
             android:textSize="21sp"
             android:text="Restart"
@@ -127,7 +127,7 @@
             android:gravity="center_horizontal"
             android:layout_marginTop="30dp"
             android:layout_marginHorizontal="20dp"
-            android:background="@color/design_default_color_primary"
+            android:background="@color/colorPrimary"
             android:paddingVertical="15dp"
             android:textSize="21sp"
             android:text="Exit Game"
