--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -5,8 +5,8 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:startColor="#30cfd0"
-                android:endColor="#330867"
+                android:startColor="#2c3e50"
+                android:endColor="#bdc3c7"
                 android:type="linear"/>
         </shape>
     </item>
