--- a/app/src/main/res/drawable/gradient_green_background.xml
+++ b/app/src/main/res/drawable/gradient_green_background.xml
@@ -5,8 +5,8 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:startColor="#00FF60"
-                android:endColor="#008000"
+                android:startColor="#008000"
+                android:endColor="#bdc3c7"
                 android:type="linear"/>
         </shape>
     </item>
