--- a/app/src/main/res/drawable/gradient_red_background.xml
+++ b/app/src/main/res/drawable/gradient_red_background.xml
@@ -5,8 +5,8 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:startColor="#FF8000"
-                android:endColor="#FF0000"
+                android:startColor="#FF0000"
+                android:endColor="#bdc3c7"
                 android:type="linear"/>
         </shape>
     </item>
