--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#27054F</color>
+    <color name="colorPrimary">#202d3b</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
-    <color name="colorGreen">#FF2E7D32</color>
+    <color name="colorGreen">#202d3b</color>
 
     <color name="black_overlay">#66000000</color>
 </resources>
